@@ -14,6 +14,7 @@
   explicitly nullable.
 - Bugfix: Catch a Throwable in the ProcessInteger.
 - Bugfix: Better Base64 detection.
+- Bugfix: The error handler was not removed in the file reader.
 
 5.0.3
 - Bugfix: Possible warning in file reader.
